aws/infra/load_balancers.tf
resource "aws_lb" "load_balancer" {
  name = "${var.environment_name}-lb"
  internal = false
  load_balancer_type = "application"
  subnets = data.aws_subnet_ids.default_subnet.ids
  security_groups = [ aws_security_group.alb.id ]
}

resource "aws_lb_target_group" "my_target_group" {
  name = "${var.environment_name}-tg"
  port = 80
  protocol = "HTTP"
  vpc_id = data.aws_vpc.default.id

  health_check {
    path = "/"
    protocol = "HTTP"
    matcher = "200-399"
    interval = 30
    timeout = 5
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.load_balancer.arn
  port = "80"
  protocol = "HTTP"
  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.my_target_group.arn
  }
}

resource "aws_lb_target_group_attachment" "instance" {
  count = 2
  target_group_arn = aws_lb_target_group.my_target_group.arn
  target_id = aws_instance.instance[count.index].id 
  port = 80
}

resource "aws_lb_listener_rule" "test-listener" {
  listener_arn = aws_lb_listener.http.arn
  priority = 100

  action {
    type = "forward"
    target_group_arn = aws_lb_target_group.my_target_group.arn
  }

  condition {
    path_pattern {
      values = ["*"]
    }
  }
}
